--- a/index.html
+++ b/index.html
@@ -50,47 +50,43 @@
 		<h2 class="section-title timeline">Experience</h2>
 		<ol class="timeline">
 		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">Today - Aug. 2022</span>
-		    <p class="description">
-		      Ph.D. Student<br>
-			  University of Maryland <br>College Park
-		    </p>
+			<span class="point"></span>
+			<span class="date">Sep. 2014 - Jun. 2018</span>
+			<p class="description">
+				B.S.<br>
+				National Chiao Tung University
+			</p>
 		  </li>
-
 		  <li class="is-revealing is-header">
 		    <span class="point"></span>
-			<span class="date">Nov. 2023 - May 2023</span>
-		    <p class="description">
-		      Research Intern<br>
-			  Adobe Research
-		    </p>
-		  </li>
-
-		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">Mar. 2022 - Sep. 2020</span>
-		    <p class="description">
-		      Research Assistant<br>
-			  Academia Sinica, Taiwan
-		    </p>
-		  </li>
-		
-		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">Jun. 2020 - Sep. 2018</span>
+			<span class="date">Sep. 2018 - Jun. 2020</span>
 		    <p class="description">
 		      M.S.<br>
 			  National Taiwan University
 		    </p>
 		  </li>
-
 		  <li class="is-revealing is-header">
 		    <span class="point"></span>
-			<span class="date">Jun. 2018 - Sep. 2014</span>
+			<span class="date">Sep. 2020 - Mar. 2022</span>
 		    <p class="description">
-		      B.S.<br>
-			  National Chiao Tung University
+		      Research Assistant<br>
+			  Academia Sinica, Taiwan
+		    </p>
+		  </li>
+		  <li class="is-revealing is-header">
+		    <span class="point"></span>
+			<span class="date">May 2023 - Nov. 2023</span>
+		    <p class="description">
+		      Research Intern<br>
+			  Adobe Research
+		    </p>
+		  </li>
+		  <li class="is-revealing is-header">
+		    <span class="point"></span>
+			<span class="date">Aug. 2022 - Today</span>
+		    <p class="description">
+		      Ph.D. Student<br>
+			  University of Maryland <br>College Park
 		    </p>
 		  </li>
 		</ol>
