--- a/index.html
+++ b/index.html
@@ -47,55 +47,59 @@
 	<!-- Timeeline -->
 
 	<div class="container">
-		<h2 class="section-title timeline">Experience</h2>
+		<!-- <h2 class="section-title timeline">Experience</h2> -->
 		<ol class="timeline">
-		  <li class="is-revealing is-header">
-			<span class="point"></span>
-			<span class="date">Sep. 2014 - Jun. 2018</span>
-			<p class="description">
-				B.S.<br>
-				National Chiao Tung University
-			</p>
-		  </li>
-		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">Sep. 2018 - Jun. 2020</span>
-		    <p class="description">
-		      M.S.<br>
-			  National Taiwan University
-		    </p>
-		  </li>
-		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">Sep. 2020 - Mar. 2022</span>
-		    <p class="description">
-		      Research Assistant<br>
-			  Academia Sinica, Taiwan
-		    </p>
-		  </li>
-		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">May 2023 - Nov. 2023</span>
-		    <p class="description">
-		      Research Intern<br>
-			  Adobe Research
-		    </p>
-		  </li>
-		  <li class="is-revealing is-header">
-		    <span class="point"></span>
-			<span class="date">Aug. 2022 - Today</span>
-		    <p class="description">
-		      Ph.D. Student<br>
-			  University of Maryland <br>College Park
-		    </p>
-		  </li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
+				<img src="images/umd.webp" class="logo"/>
+				<p class="description">
+				  University of Maryland College Park<br>
+				  Ph.D. Student<br>
+				  Today – Aug. 22
+				</p>
+			</li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
+				<img src="images/adobe.jpg" class="logo"/>
+				<p class="description">
+				  Adobe Research<br>
+				  Research Intern<br>
+				  Nov. 23 – May 23
+				</p>
+			</li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
+				<img src="images/Academia_Sinica.png" class="logo"/>
+				<p class="description">
+				  Academia Sinica<br>
+				  Research Assistant<br>
+				  Mar. 22 – Sep. 20
+				</p>
+				<p class="date"></p>
+			</li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
+				<img src="images/ntu.png" class="logo"/>
+				<p class="description">
+					National Taiwan University<br>
+					M.S.<br>
+					Jun. 20 – Sep. 18
+				</p>
+			</li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
+				<img src="images/nctu.png" class="logo"/>
+				<p class="description">
+					National Chiao Tung University<br>
+					B.S.<br>
+					Jun. 18 – Sep. 14
+				</p>
+			</li>
 		</ol>
-
 	</div>
-	<br><br>
 	<!-- Publications -->
 
-	<div class="container" style="margin-top: 80px">
+	<div class="container">
 		<h2 class="section-title">Publications</h2>
 
 		<div class="row publication">
@@ -115,7 +119,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/shape-aware-snapshot.gif'>
+				<img src='images/shape-aware-video-editing.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title">Shape-aware Text-driven Layered Video Editing</p>
@@ -132,7 +136,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/latent-diffusion-prior-snapshot.gif'>
+				<img src='images/latent-diffusion-prior.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
@@ -147,7 +151,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/gcvd-snapshot.gif'>
+				<img src='images/gcvd.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
@@ -162,7 +166,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/deep3d_cover_lite.gif'>
+				<img src='images/deep3d-stabilizer.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title">3D Video Stabilization with Depth Estimation by CNN-based Optimization</p>
@@ -183,7 +187,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/pixstabnet-pipeline.png'>
+				<img src='images/pixstabnet.png'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title">PixStabNet: Fast Deep Online Video Stabilization</p>
