--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			</div>
 			<div class="col-lg-8">
 				<p class="title">Shape-aware Text-driven Layered Video Editing</p>
-				<p class="author"><u>Yao-Chih Lee</u>, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="https://elizabethqiu.com/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="author"><u>Yao-Chih Lee</u>, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="#">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="publish">CVPR 2023</p>
 				<a class="btn" href="https://text-video-edit.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
