--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp email</a>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/resume.pdf"><i class="fab fas fa-file-alt"></i>&nbsp Resume</a>
-			<a class="btn is-revealing is-header" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&nbsp LinkedIn</a>
+			<a class="btn is-revealing is-header" href="https://scholar.google.com/citations?hl=en&user=9oVI7yYAAAAJ"><i class="fab fa-google"></i>&nbsp Google Scholar</a>
 			<a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a>
 		</div>
 		
