--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	<!-- Publications -->
 
 	<div class="container">
-		<h2 class="section-title">Publications</h2>
+		<h2 class="section-title">Selected Publications</h2>
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -143,7 +143,7 @@
 			</div>
 		</div>
 
-		<div class="row publication">
+		<!-- <div class="row publication">
 			<div class="col-lg-4">
 				<img src='images/latent-diffusion-prior.gif'>
 			</div>
@@ -156,9 +156,9 @@
 				<a class="btn" href="https://arxiv.org/abs/2301.13173">
 					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
 			</div>
-		</div>
+		</div> -->
 
-		<div class="row publication">
+		<!-- <div class="row publication">
 			<div class="col-lg-4">
 				<img src='images/gcvd.gif'>
 			</div>
@@ -171,7 +171,7 @@
 				<a class="btn" href="https://github.com/yaochih/GCVD-release">
 					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -194,7 +194,7 @@
 			</div>
 		</div>
 
-		<div class="row publication">
+		<!-- <div class="row publication">
 			<div class="col-lg-4">
 				<img src='images/pixstabnet.png'>
 			</div>
@@ -218,7 +218,7 @@
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
 					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<!-- End of publications -->
 
