--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
 			</div>
 			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp email</a>
-			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/resume.pdf"><i class="fab fas fa-file-alt"></i>&nbsp Resume</a>
 			<a class="btn is-revealing is-header" href="https://scholar.google.com/citations?hl=en&user=9oVI7yYAAAAJ"><i class="fab fa-google"></i>&nbsp Google Scholar</a>
+			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/resume.pdf"><i class="fab fas fa-file-alt"></i>&nbsp Resume</a>
 			<a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a>
 		</div>
 		
@@ -109,7 +109,7 @@
 	<!-- Publications -->
 
 	<div class="container">
-		<h2 class="section-title">Selected Publications</h2>
+		<h2 class="section-title">Featured</h2>
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -143,35 +143,7 @@
 			</div>
 		</div>
 
-		<!-- <div class="row publication">
-			<div class="col-lg-4">
-				<img src='images/latent-diffusion-prior.gif'>
-			</div>
-			<div class="col-lg-8">
-				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
-				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <u>Yao-Chih Lee</u>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
-				<p class="publish">arXiv preprint 2023</p>
-				<a class="btn" href="https://latent-diffusion-prior.github.io/">
-					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
-				<a class="btn" href="https://arxiv.org/abs/2301.13173">
-					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
-			</div>
-		</div> -->
-
-		<!-- <div class="row publication">
-			<div class="col-lg-4">
-				<img src='images/gcvd.gif'>
-			</div>
-			<div class="col-lg-8">
-				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
-				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
-				<p class="publish">arXiv preprint 2022</p>
-				<a class="btn" href="https://arxiv.org/abs/2208.02709">
-					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
-				<a class="btn" href="https://github.com/yaochih/GCVD-release">
-					<i class="fab fa-github"></i>&nbsp Code</a>
-			</div>
-		</div> -->
+		
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -193,8 +165,41 @@
 					<i class="fab fas fa-list-ul"></i>&nbsp Awesome video stabilization</a>
 			</div>
 		</div>
+		
+		<br/><hr/><br/>
+		<h2 class="section-title">Others</h2>
 
-		<!-- <div class="row publication">
+		<div class="row publication">
+			<div class="col-lg-4">
+				<img src='images/latent-diffusion-prior.gif'>
+			</div>
+			<div class="col-lg-8">
+				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
+				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <u>Yao-Chih Lee</u>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="publish">arXiv preprint 2023</p>
+				<a class="btn" href="https://latent-diffusion-prior.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+				<a class="btn" href="https://arxiv.org/abs/2301.13173">
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+			</div>
+		</div>
+
+		<div class="row publication">
+			<div class="col-lg-4">
+				<img src='images/gcvd.gif'>
+			</div>
+			<div class="col-lg-8">
+				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
+				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
+				<p class="publish">arXiv preprint 2022</p>
+				<a class="btn" href="https://arxiv.org/abs/2208.02709">
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+				<a class="btn" href="https://github.com/yaochih/GCVD-release">
+					<i class="fab fa-github"></i>&nbsp Code</a>
+			</div>
+		</div>
+
+		<div class="row publication">
 			<div class="col-lg-4">
 				<img src='images/pixstabnet.png'>
 			</div>
@@ -218,7 +223,7 @@
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
 					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
-		</div> -->
+		</div>
 	</div>
 	<!-- End of publications -->
 
