--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
-			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp email</a>
+			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp Email</a>
 			<a class="btn is-revealing is-header" href="https://scholar.google.com/citations?hl=en&user=9oVI7yYAAAAJ"><i class="fab fa-google"></i>&nbsp Google Scholar</a>
 			<!-- <a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a> -->
 			<a class="btn is-revealing is-header" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&nbsp LinkedIn</a>
