--- a/index.html
+++ b/index.html
@@ -118,13 +118,15 @@
 				<img src='images/casual-fvs.gif'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">Fast View Synthesis of Casual Videos</p>
+				<p class="title">Fast View Synthesis of Casual Videos with Soup-of-Planes</p>
 				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://jimmie33.github.io/">Jianming Zhang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a></p>
 				<p class="publish">ECCV 2024</p>
 				<a class="btn" href="https://casual-fvs.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 					<a class="btn" href="https://arxiv.org/abs/2312.02135">
 						<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+					<a class="btn" href="https://youtu.be/e4LrUpUBsMA">
+						<i class="fab fa-youtube"></i>&nbsp Video</a>
 			</div>
 		</div>
 
