--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 					<h1 class="name"><strong>Yao-Chih</strong> Lee</h1>
 					<!--<span class="job-title">Ph.D. Student</span>-->
 					<!--<span class="email">yclee@umd.edu</span>-->
-					<h2 class="lead">Ph.D. Student
-					<br/>Department of Computer Science
+					<h2 class="lead">CS Ph.D. Student
 					<br/>University of Maryland College Park</h2>
 				</div>
 				<div class="col-lg-4">
@@ -40,7 +39,7 @@
 				</div>
 			</div>
 			<div class="is-revealing is-header">
-				<p>I am a Ph.D. student at the University of Maryland, College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+				<p>I am a third-year Ph.D. student at UMD, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
 				<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
 					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
@@ -62,29 +61,38 @@
 		<ol class="timeline">
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/umd.webp" class="logo"/>
+				<img src="images/umd.png" class="logo" style="transform: scale(1.08);"/>
 				<p class="description">
-				  University of Maryland College Park<br>
+				  UMD<br>
 				  Ph.D. Student<br>
-				  Today – Aug. 22
+				  Today – 2022
 				</p>
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/adobe.jpg" class="logo"/>
+				<img src="images/google-deepmind.png" class="logo" style="transform: scale(1.2);"/>
+				<p class="description">
+				  Google DeepMind<br>
+				  Student Researcher<br>
+				  2024
+				</p>
+			</li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
+				<img src="images/adobe.png" class="logo"/>
 				<p class="description">
 				  Adobe Research<br>
 				  Research Intern<br>
-				  Nov. 23 – May 23
+				  2023
 				</p>
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
 				<img src="images/Academia_Sinica.png" class="logo"/>
 				<p class="description">
-				  Academia Sinica<br>
-				  Research Assistant<br>
-				  Mar. 22 – Sep. 20
+					Academia Sinica<br>
+					Research Assistant<br>
+					2022 - 2020
 				</p>
 				<p class="date"></p>
 			</li>
@@ -92,18 +100,16 @@
 				<!-- <span class="point"></span> -->
 				<img src="images/ntu.png" class="logo"/>
 				<p class="description">
-					National Taiwan University<br>
-					M.S.<br>
-					Jun. 20 – Sep. 18
+					National Taiwan University M.S.<br>
+					2020 - 2018
 				</p>
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
 				<img src="images/nctu.png" class="logo"/>
 				<p class="description">
-					National Chiao Tung University<br>
-					B.S.<br>
-					Jun. 18 – Sep. 14
+					National Chiao Tung University B.S.<br>
+					2018 - 2014
 				</p>
 			</li>
 		</ol>
@@ -118,13 +124,13 @@
 				<img src='images/casual-fvs.gif'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">Fast View Synthesis of Casual Videos with Soup-of-Planes</p>
-				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://jimmie33.github.io/">Jianming Zhang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a></p>
-				<p class="publish">ECCV 2024</p>
+				<p class="title"><a href="https://casual-fvs.github.io/">Fast View Synthesis of Casual Videos with Soup-of-Planes</a></p>
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://jimmie33.github.io/">Jianming Zhang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a></p>
+				<p class="venue">ECCV 2024</p>
 				<a class="btn" href="https://casual-fvs.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 					<a class="btn" href="https://arxiv.org/abs/2312.02135">
-						<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+						<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 					<a class="btn" href="https://youtu.be/e4LrUpUBsMA">
 						<i class="fab fa-youtube"></i>&nbsp Video</a>
 			</div>
@@ -135,9 +141,9 @@
 				<img src='images/shape-aware-video-editing.gif'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">Shape-aware Text-driven Layered Video Editing</p>
-				<p class="author"><u>Yao-Chih Lee</u>, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="#">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
-				<p class="publish">CVPR 2023</p>
+				<p class="title"><a href="https://text-video-edit.github.io/">Shape-aware Text-driven Layered Video Editing</a></p>
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="#">Ji-Ze Genevieve Jang</a>, <a  href="https://jamie725.github.io/website/">Yi-Ting Chen</a>, <a href="#">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="venue">CVPR 2023</p>
 				<a class="btn" href="https://text-video-edit.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Lee_Shape-Aware_Text-Driven_Layered_Video_Editing_CVPR_2023_paper.pdf">
@@ -154,9 +160,9 @@
 				<img src='images/deep3d-stabilizer.gif'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">3D Video Stabilization with Depth Estimation by CNN-based Optimization</p>
-				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yu-Ta Chen, Chien-Cheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
-				<p class="publish">CVPR 2021</p>
+				<p class="title"><a href="https://yaochih.github.io/deep3d-stabilizer.io/">3D Video Stabilization with Depth Estimation by CNN-based Optimization</a></p>
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Yu-Ta Chen, Chien-Cheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
+				<p class="venue">CVPR 2021</p>
 				<a class="btn" href="https://yaochih.github.io/deep3d-stabilizer.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Lee_3D_Video_Stabilization_With_Depth_Estimation_by_CNN-Based_Optimization_CVPR_2021_paper.pdf">
@@ -178,9 +184,9 @@
 				<img src='images/latent-diffusion-prior.gif'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">Text-driven Visual Synthesis with Latent Diffusion Prior</p>
-				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <u>Yao-Chih Lee</u>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
-				<p class="publish">arXiv preprint 2023</p>
+				<p class="title"><a href="https://latent-diffusion-prior.github.io/">Text-driven Visual Synthesis with Latent Diffusion Prior</a></p>
+				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <strong>Yao-Chih Lee</strong>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="venue">arXiv preprint 2023</p>
 				<a class="btn" href="https://latent-diffusion-prior.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 				<a class="btn" href="https://arxiv.org/abs/2301.13173">
@@ -193,9 +199,9 @@
 				<img src='images/gcvd.gif'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</p>
-				<p class="author"><u>Yao-Chih Lee</u>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
-				<p class="publish">arXiv preprint 2022</p>
+				<p class="title"><a href="https://arxiv.org/abs/2208.02709">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</a></p>
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
+				<p class="venue">arXiv preprint 2022</p>
 				<a class="btn" href="https://arxiv.org/abs/2208.02709">
 					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
 				<a class="btn" href="https://github.com/yaochih/GCVD-release">
@@ -208,9 +214,9 @@
 				<img src='images/pixstabnet.png'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">PixStabNet: Fast Deep Online Video Stabilization</p>
-				<p class="author">Yu-Ta Chen, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, <u>Yao-Chih Lee</u>, Chun-Yu Chen, and <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
-				<p class="publish">ICIP 2021</p>
+				<p class="title"><a href="https://ieeexplore.ieee.org/document/9506801">PixStabNet: Fast Deep Online Video Stabilization</a></p>
+				<p class="author">Yu-Ta Chen, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, <strong>Yao-Chih Lee</strong>, Chun-Yu Chen, and <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a></p>
+				<p class="venue">ICIP 2021</p>
 				<a class="btn" href="https://ieeexplore.ieee.org/document/9506801">
 					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
@@ -221,9 +227,9 @@
 				<img src='images/part-aware-human-pose-cvprw-2021.png'>
 			</div>
 			<div class="col-lg-8">
-				<p class="title">Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</p>
-				<p class="author">Hau Chu, Jia-Hong Lee, <u>Yao-Chih Lee</u>, Ching-Hsien Hsu, Jia-Da Li, and <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
-				<p class="publish">CVPR Workshop 2021</p>
+				<p class="title"><a href="https://arxiv.org/abs/2106.11589">Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</a></p>
+				<p class="author">Hau Chu, Jia-Hong Lee, <strong>Yao-Chih Lee</strong>, Ching-Hsien Hsu, Jia-Da Li, and <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
+				<p class="venue">CVPR Workshop 2021</p>
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
 					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
