--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<ol class="timeline">
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/umd.png" class="logo" style="transform: scale(1.08);"/>
+				<img src="images/umd.png" class="logo" style="transform: scale(0.81);"/>
 				<p class="description">
 				  UMD<br>
 				  Ph.D. Student<br>
@@ -70,25 +70,25 @@
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/google-deepmind.png" class="logo" style="transform: scale(1.2);"/>
+				<img src="images/google.webp" class="logo" style="transform: scale(0.78);"/>
 				<p class="description">
-				  Google DeepMind<br>
+				  Google<br>
 				  Student Researcher<br>
-				  2024
+				  Summer 2024
 				</p>
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/adobe.png" class="logo"/>
+				<img src="images/adobe.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
-				  Adobe Research<br>
+				  Adobe<br>
 				  Research Intern<br>
-				  2023
+				  Summer 2023
 				</p>
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/Academia_Sinica.png" class="logo"/>
+				<img src="images/Academia_Sinica.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
 					Academia Sinica<br>
 					Research Assistant<br>
@@ -98,7 +98,7 @@
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/ntu.png" class="logo"/>
+				<img src="images/ntu.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
 					National Taiwan University M.S.<br>
 					2020 - 2018
@@ -106,7 +106,7 @@
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/nctu.png" class="logo"/>
+				<img src="images/nctu.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
 					National Chiao Tung University B.S.<br>
 					2018 - 2014
