--- a/index.html
+++ b/index.html
@@ -28,21 +28,26 @@
 		<div class="intro">
 			<div class="row">
 				<div class="col-lg-8 is-revealing is-header">
-					<h1 class="name"><strong>Yao-Chih</strong> Lee</h1>
+					<h1 class="name"><strong>Yao-Chih Lee</strong></h1>
 					<!--<span class="job-title">Ph.D. Student</span>-->
 					<!--<span class="email">yclee@umd.edu</span>-->
-					<h2 class="lead">CS Ph.D. Student
-					<br/>University of Maryland College Park</h2>
+					<h2 class="lead">CS Ph.D. Student at the University of Maryland
+					<br/>3D Vision and Video Synthesis</h2>
 				</div>
 				<div class="col-lg-4">
 					<img class="img-fluid" src="images/profile.png" alt="alternative" style="max-width: 60%; margin-left: 20%; margin-right: 20%;">
 				</div>
 			</div>
 			<div class="is-revealing is-header">
-				<p>I am a third-year Ph.D. student at UMD, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
-					My research interests lie in the fields of 3D Computer Vision and Video Synthesis.</p>
-				<p>I am honored to work with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica,
-					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University, and <a href="http://covis.cs.nctu.edu.tw/advisor.php">Kuan-Wen Chen</a> at National Chiao Tung University, Taiwan.</p>
+				<p>I am a third-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from videos for synthesis and editing.</p>
+
+				<p>I am interning at Google DeepMind, where I am privileged to work with
+					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, <a href="">Sarah Rumbley</a>.
+					In the past, I was also fortunate to collaborate with
+					<a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe;
+					<a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica; and
+					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University.</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
 			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp Email</a>
@@ -117,7 +122,7 @@
 	<!-- Publications -->
 
 	<div class="container">
-		<h2 class="section-title">Featured</h2>
+		<h2 class="section-title">Publications</h2>
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -175,9 +180,8 @@
 					<i class="fab fas fa-list-ul"></i>&nbsp Awesome video stabilization</a>
 			</div>
 		</div>
-		
-		<br/><hr/><br/>
-		<h2 class="section-title">Others</h2>
+		<hr/>
+		<!-- <h2 class="section-title">Others</h2> -->
 
 		<div class="row publication">
 			<div class="col-lg-4">
