--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from videos for synthesis and editing.</p>
 
 				<p>I am interning at Google DeepMind, where I am privileged to work with
-					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, <a href="">Sarah Rumbley</a>.
+					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>.
 					In the past, I was also fortunate to collaborate with
 					<a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe;
 					<a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica; and
