--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 
 	<footer class="container">
-		<span style="font-size: 16px; ">The webpage template is borrowed from <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a>. The curriculum vitae's template is borrwoed from <a href="https://sniklaus.com/welcome">Simon Niklaus</a>.</href></span>
+		<span style="font-size: 16px; ">The webpage template is borrowed from <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a>. The curriculum vitae's template is borrowed from <a href="https://sniklaus.com/welcome">Simon Niklaus</a>.</href></span>
 	</footer>
 
 	<script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
