--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 			</li>
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
-				<img src="images/google.webp" class="logo" style="transform: scale(0.78);"/>
+				<img src="images/gdm.png" class="logo" style="transform: scale(0.81);"/>
 				<p class="description">
-				  Google<br>
+				  Google DeepMind<br>
 				  Student Researcher<br>
 				  Summer 2024
 				</p>
@@ -88,7 +88,7 @@
 				<!-- <span class="point"></span> -->
 				<img src="images/adobe.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
-				  Adobe<br>
+				  Adobe Research<br>
 				  Research Intern<br>
 				  Summer 2023
 				</p>
@@ -125,6 +125,26 @@
 
 	<div class="container">
 		<h2 class="section-title">Publications</h2>
+
+		<div class="row publication">
+			<div class="col-lg-4">
+				<!-- <img src='images/.gif'> -->
+				<video class="video" style="max-width: 100%;" loop playsinline autoplay muted>
+					<source src="images/generative-omnimatte-thumbmail.mp4" />
+				</video>
+			</div>
+			<div class="col-lg-8">
+				<p class="title"><a href="https://gen-omnimatte.github.io/">Generative Omnimatte: Learning to Decompose Video into Layers</a></p>
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://scholar.google.com/citations?user=gPkCTQ0AAAAJ&hl=en">Sarah Rumbley</a>, <a href="https://michalgeyer.my.canva.site/">Michal Geyer</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, <a href="https://people.csail.mit.edu/fcole/">Forrester Cole</a></p>
+				<p class="venue">arXiv 2024</p>
+				<a class="btn" href="https://gen-omnimatte.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+					<a class="btn" href="">
+						<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
+					<a class="btn" href="https://www.youtube.com/watch?v=SD-VCNvTBg4">
+						<i class="fab fa-youtube"></i>&nbsp Video</a>
+			</div>
+		</div>
 
 		<div class="row publication">
 			<div class="col-lg-4">
