--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<p class="venue">arXiv 2024</p>
 				<a class="btn" href="https://gen-omnimatte.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
-					<a class="btn" href="">
+					<a class="btn" href="https://arxiv.org/pdf/2411.16683">
 						<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 					<a class="btn" href="https://www.youtube.com/watch?v=SD-VCNvTBg4">
 						<i class="fab fa-youtube"></i>&nbsp Video</a>
